# tradestat-ingestor

./: .env.example  .gitignore  BATCH_PROCESSING.md  CHANGE_DETECTION_QUICK_REF.md  CHANGE_DETECTION_README.md  DEPLOYMENT_SETUP.md  DEPLOYMENT_requirements.txt  DOCUMENTATION.md  GITHUB_READY.md  QUICKSTART.md  QUICK_START_CARD.md  README.md  SCHEMA_DOCUMENTATION.md  TEAM_ONBOARDING.md  bootstrap_project.py  debug_bootstrap.py  debug_table.py  pyproject.toml  requirements.txt  scrape_cli.py  scrape_commodity_wise.py  scrape_country_wise.py  scrape_meidb_commodity_wise.py  scrape_meidb_commodity_wise_all_countries.py  scrape_region_wise.py  test_import.py  test_import_quick.py
commodity_wise/: README.md
commodity_wise/lib/: parser.py  scraper.py  storage.py
commodity_wise_all_countries/: .env.example
commodity_wise_all_countries/lib/: __init__.py  consolidator.py  scraper.py
country_wise/: README.md
eidb/chapter_wise_all_commodities/: .env.example  README.md  scrape_chapter_wise_all_commodities.py
eidb/commodity_wise/: scrape_commodity_wise.py
eidb/commodity_wise_all_countries/: README.md  scrape_all_countries.py  scrape_cli.py
eidb/commodity_x_country_timeseries/: .env.example  README.md  scrape_commodity_x_country_timeseries.py
eidb/country_wise/: .env.example  scrape_country_wise.py
eidb/region_wise/: .env.example  README.md  scrape_region_wise.py
eidb/region_wise_all_commodities/: .env.example  README.md  scrape_region_wise_all_commodities.py
meidb/commodity_wise/: README.md  (+1 more)
scripts/: auto_batch_pipeline.py  rq_worker.py  start_workers.sh
(+21778 files in other folders)
