[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradestat-ingestor"
version = "0.1.0"
description = "Scalable ingestion pipeline for India trade import/export data"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "httpx",
    "pandas",
    "pyarrow",
    "python-dotenv",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    "loguru",
    "redis",
    "rq",
    "sqlalchemy",
    "psycopg2-binary",
    "tenacity",
    "tqdm",
    "typer[all]"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tradestat-ingest = "tradestat_ingestor.cli:main"

